--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,21 @@ canvas {
   padding: 8px 12px;
 
 }
+
+#results-holder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.8);
+}
+#results {
+  
+  width: 100%;
+  height: 100%;
+  background-image: url("file:///Users/james/Documents/Github/practice-run/img/results.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
