--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,8 @@ canvas {
   background: rgba(255,255,255,0.5);
   border-radius: 6px;
   padding: 8px 12px;
-
+  display: flex;
+  flex-direction: row;
 }
 
 #results-holder {
